--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Lab1)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES "aew0056_1.cpp" "User.cpp" "Menu.cpp" "WallPage.cpp" HomePage.cpp HomePage.h)
+set(SOURCE_FILES "UserTests.cpp" "User.cpp" "Menu.cpp" "WallPage.cpp" HomePage.cpp HomePage.h)
 add_executable(Lab2 ${SOURCE_FILES})
